Add in nav bar and hero header text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,49 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>scroll project</h1>
+    <!-- header -->
+    <header id="home">
+      <!-- navbar -->
+      <nav id="nav">
+        <div class="nav-center">
+          <!-- nav header -->
+          <div class="nav-header">
+            <img alt="logo" class="logo" src="./logo.svg" />
+            <button class="nav-toggle">
+              <i class="fa fa-bars"></i>
+            </button>
+          </div>
+          <div class="links-container">
+            <!-- links-->
+            <ul class="links">
+              <li>
+                <a href="#home" class="scroll-link">home</a>
+              </li>
+              <li>
+                <a href="#about" class="scroll-link">about</a>
+              </li>
+              <li>
+                <a href="#services" class="scroll-link">services</a>
+              </li>
+              <li>
+                <a href="#tours" class="scroll-link">tours</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- banner -->
+      <div class="banner">
+        <div class="container">
+          <h1>scroll project</h1>
+          <p>
+            Egestas sed sed risus pretium quam vulputate dignissim suspendisse
+            in est ante in nibh mauris, cursus mattis molestie a, iaculis!
+          </p>
+          <a class="scroll-link btn btn-white" href="#tours">explore tours</a>
+        </div>
+      </div>
+    </header>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
