--- a/index.html
+++ b/index.html
@@ -56,6 +56,37 @@
         </div>
       </div>
     </header>
+    <!-- about -->
+    <section id="about" class="section">
+      <div class="title">
+        <h2>about <span>us</span></h2>
+      </div>
+    </section>
+    <!-- services -->
+    <section id="services" class="section">
+      <div class="title">
+        <h2>our <span>services</span></h2>
+      </div>
+    </section>
+    <!-- tours -->
+    <section id="tours" class="section">
+      <div class="title">
+        <h2>featured <span>tours</span></h2>
+      </div>
+    </section>
+    <!-- footer -->
+
+    <footer class="section">
+      <p>
+        copyright &copy; backroads travel tours company
+        <span id="date">2020</span>.all rights reserved
+      </p>
+    </footer>
+    <!-- bact to top button -->
+    <a class="scroll-link top-link" href="#home"
+      ><i class="fas fa-arrow-up"></i
+    ></a>
+
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
