Add fixed nav bar functionality when scrolling

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
       </p>
     </footer>
     <!-- bact to top button -->
-    <a class="scroll-link top-link" href="#home"
-      ><i class="fas fa-arrow-up"></i
-    ></a>
+    <a class="scroll-link top-link" href="#home">
+	<i class="fas fa-arrow-up"></i>
+    </a>
 
     <!-- javascript -->
     <script src="app.js"></script>
